ACSL 2020-2021 - Contest 3 - MultipleArrays - Senior Division